--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,79 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+    margin: 0;
+    background-color: #202020;
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    align-items: center;
+}
+
+.app{
+    display: flex;
+    height: 360px;
+    width: 652px;
+}
+
+input{
+    border: 1px solid #818588;
+    border-radius: 8px;
+    box-sizing: border-box;
+    color: #bdc1c6;
+    font-size: 14px;
+    height: 40px;
+    background-color: transparent;
+    width: 100%;
+}
+
+.output, .input{
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+}
+
+textarea{
+    background-color: transparent;
+    color: #bdc1c6;
+    border: none;
+    resize: none;
+    padding: 18px;
+    width: 200px !important;
+    height: 146px;
+    border-radius: 18px;
+    outline: none;
+    overflow: auto;
+    font-size: 28px;
+    margin-top: 10px;
+}
+
+.output textarea{
+    background-color: #303134;
+}
+
+.select-drop-down input{
+    color: #8ab4f8;
+    padding: 5px 15px;
+    font-size: 15px;
+}
+
+.select-drop-down .down-arrow svg{
+    position: relative;
+    left: 265px;
+    top: -33px;
+    width: 26px;
+    height: 26px;
+    fill: #8ab4f8;
+}
+
+.arrow-container{
+    padding: 15px;
+}
+
+.arrow-container svg{
+    width: 26px;
+    height: 26px;
+    fill: #5a5a5d;
 }
