translate app completed api integrated successsfully. text translation done properly

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 body{
     margin: 0;
-    background-color: #202020;
+    background-color: #1b1b1b;
     display: flex;
     justify-content: center;
     height: 100vh;
@@ -40,7 +40,7 @@ textarea{
     border: none;
     resize: none;
     padding: 18px;
-    width: 200px !important;
+    width: 300px !important;
     height: 146px;
     border-radius: 18px;
     outline: none;
@@ -70,10 +70,106 @@ textarea{
 
 .arrow-container{
     padding: 15px;
+    cursor: pointer;
 }
 
 .arrow-container svg{
     width: 26px;
     height: 26px;
     fill: #5a5a5d;
+}
+
+.option-list{
+    width: 100%;
+}
+
+.search-bar{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+}
+
+.search-bar input{
+    background: url(https://www.gstatic.com/images/icons/material/system/2x/search_grey600_24dp.png) right 8px center no-repeat;
+    background-size: 24px 24px;
+    padding-left: 16px;
+    padding-right: 40px;
+    width: 90% !important;
+    outline: none;
+}
+
+.search-bar .close-button svg {
+    width: 30px;
+    height: 30px;
+    padding: 6px;
+    fill: #5a5a5d;
+}
+
+.option-container{
+    height: 250px;
+    overflow: auto;
+}
+
+.option-list ul{
+    margin: 15px;
+    padding: 0;
+    height: 1300px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    list-style: none;
+}
+
+.option-list li {
+    /* width: 50%; Each item takes 50% of the container width for a two-column layout */
+    padding: 8px; /* Adjust padding as needed */
+    /* box-sizing: border-box; Include padding in the width calculation */
+    font-size: 14px;
+    list-style-type: none;
+    color: #bdc1c6;
+    border-radius: 4px;
+}
+
+.option-list li:hover{
+    background-color: #5a5a5d;
+}
+
+.list-item{
+    display: flex;    
+}
+
+.list-item .icon{
+    padding: 8px;
+    width: 11px;
+    color: #8ab4f8;
+}
+
+.button-container{
+    color: #bdc1c6;
+    height: 20px;
+    padding: 18px;
+}
+
+.input .delete{
+    position: relative;
+    left: 256px;
+    top: -180px;
+    font-size: 50px;
+    color: #bdc1c6;
+    cursor: pointer;
+}
+
+.ArrowMark{
+    cursor: pointer;
+    padding: 10px 20px;
+    position: relative;
+    top: -15px;
+    border-radius: 10px;
+    color: #000000;
+    background-color: #5697ff;
+}
+.ArrowMark:hover{
+    cursor: pointer;
+    background-color: aliceblue;
 }
